[package]
name = "uniqtoo"
version = "0.2.0"
authors = ["Jake Wharton <uniqtoo@jakewharton.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A version of `sort | uniq -c` with output that updates in real-time as each line is parsed"
readme = "README.md"
repository = "https://github.com/JakeWharton/uniqtoo/"
categories = ["command-line-utilities"]
exclude = [".github/**"]

[dependencies]
structopt = "0.3"

[profile.release]
lto = true
codegen-units = 1
